# bluefelt

./: .gitignore  README.md  development.md  nx.json  package.json
clients/react/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
clients/react/public/: 404.html
clients/react/src/: App.tsx
clients/react/src/api/: games.ts  lobbies.ts
clients/react/src/components/: CreateLobbyDialog.tsx  LobbiesList.tsx  LobbyView.tsx  PlayerLogin.tsx  PlayerProfile.tsx
clients/react/src/context/: PlayerContext.tsx
clients/react/src/hooks/: useGames.ts  useLobbies.ts  useLobbyUsers.ts
clients/react/src/pages/: LobbyCreate.tsx  LobbyList.tsx  LobbyRoom.tsx  Register.tsx
clients/react/src/ws/: useLobbyWebSocket.ts
games/love-letter/1.0/: entities.yaml  manifest.yaml
games/tic-tac-toe/1.0/: entities.yaml  manifest.yaml  script.wasm
games/tic-tac-toe/1.0/hooks/: Cargo.toml
games/tic-tac-toe/1.0/hooks/src/: lib.rs
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
server/: Cargo.toml
server/src/: bundle.rs  engine.rs  lib.rs  lobby.rs  main.rs
server/tests/: lobbies.rs
spec/governance/: 01-goals.md
spec/rfcs/: 0001-bluefelt-v0.1.md
