[package]
name    = "bluefelt_sdk"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
serde       = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json  = { version = "1.0", default-features = false, features = ["alloc"] }
wee_alloc   = "0.4"
